fixed scrollbar

--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,6 +1,16 @@
 .__sidebar {
   background-color: #588157;
   color: white;
+  overflow-y: auto;
+}
+
+.__sidebar::-webkit-scrollbar {
+  display: none;
+}
+
+.__sidebar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .nav-link.active {
@@ -33,4 +43,24 @@
 .__primary-btn:active,
 .__primary-btn:visited {
   background-color: #3a5a40 !important;
+}
+
+.__card {
+  height: 200px;
+}
+
+.__mytask:hover {
+  cursor: pointer;
+  background-color: #f9f9f9;
+}
+
+.__submenu {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+  margin-left: 10px;
+}
+
+.__submenu.show {
+  max-height: 100vh;
 }
